# meme

./: .gitignore  .removed_md_list.txt  ANALYSIS_INDEX.md  APP_MIGRATION_COMPLETE.md  BUILD_STATUS_EXPORT_COMPLETE.md  CLI_FIXES_COMPLETE.md  CLI_FIXES_SDK_050.md  CLI_FIX_STATUS.txt  CLI_MIGRATION_QUICK_REF.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_FINDINGS_GO124.md  DEPENDENCY_COMPARISON_DETAILED.md  Dockerfile  EXECUTIVE_REVIEW_REPORT.md  FIX_REGISTER_SERVICE_SUMMARY.md  GO_VERSION_COMPATIBILITY_TEST.md  MIGRATION.md  MIGRATION_ANALYSIS.md  MIGRATION_SUMMARY.md  MODULEBASICS_FIX_SUMMARY.md  Makefile  PARAMS_MIGRATION_TROUBLESHOOTING.md  PLAN.md  PROJECT_SUMMARY.md  QUICK_ACTION_PLAN.md  QUICK_START_GO_BUILD.md  README.md  REVIEW_EXECUTIVE_SUMMARY.md  SDK_050_KEEPER_QUICK_REF.md  SECURITY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_0_53.md  UPGRADE.md  UPGRADE_ANALYSIS_SUMMARY.md  UPGRADE_PLAN.md  UPGRADE_PLAN_V050_14.md  VALIDATION_EXPORT.md  VISUAL_UPGRADE_STATUS.md  WASM.md  WASMVM_V2_FIXES_APPLIED.md  (+5 more)
.github/: dependabot.yml
_removed_md_backup/: BUILD_TEST_SUMMARY.md  CHANGES_SUMMARY.md  CLI_FIXES_VERIFICATION.md  EXPORT_GO_FIXES.md  (+16 more)
contracts/memeart/: Cargo.toml  README.md  build.sh  deploy-devnet.sh
contracts/memeart/examples/: schema.rs
contracts/memeart/schema/: all_nft_info_response.json  contract_info_response.json  execute_msg.json  instantiate_msg.json  list_user_info_response.json  minting_fees_response.json  nft_info_response.json  query_msg.json
contracts/memeart/src/: contract_tests.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
(+147 files in other folders)
