[package]
name = "memeart"
version = "0.1.12"
authors = ["MEME Network"]
edition = "2021"
description = "NFT based metadata"
license = "Apache-2.0"
homepage = "https://www.memeart.io/"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "2.0" }
cw2 = { version = "1.0" }
cw721 = { version = "0.21.0" }
cw721-base = { version = "0.21.0", features = ["library"] }
cw-storage-plus = { version = "2.0", features = ["iterator"] }
cosmwasm-std = { version = "2.2" }
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "2.2" }

[dependencies.regex]
version = "1.5.4"
default-features = false
features = ["std"]
